add auth app, jwt middleware
